--- a/deliverables/newton/openstack-ansible.yaml
+++ b/deliverables/newton/openstack-ansible.yaml
@@ -1807,3 +1807,75 @@ releases:
         hash: 56ca566ef024603b2fbfd3d0b7af6d844e26884a
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: 27e47df8ad22f01d0a8905ec35ff3bfa916dc89b
+  - version: 14.2.7
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 68564131c4d8a434295a7c2078fe725936b84264
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: ea0e5cd10c0d96b50887de544f53d0bcc54949fc
+      - repo: openstack/openstack-ansible-pip_install
+        hash: d3144510bf604f9dda1311c14afaf33c4c502ad6
+      - repo: openstack/openstack-ansible-galera_client
+        hash: d2c8ca9db71e2689a83d94889bf21a319aae617b
+      - repo: openstack/openstack-ansible-galera_server
+        hash: 8d5df339ddfc7c59171b2e76c1da4b7760ef24e4
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 9e336a5622a8c2d5797c3d9acaf05b4f130d3505
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 9227a79e5c349b4411fd47acc2163fc163d802b3
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: d04c99ab38fbec4a84129188805b215d1b172417
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: ff37f654f449be4afbb70a5815a3477341281cfd
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 5a84473dc25ced10a844b9e1df18f04588655bd1
+      - repo: openstack/openstack-ansible-security
+        hash: e9e425247ec00b8b2613560c84bdb8404900029c
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: 4a689188b4aad2836713c151448b35ea6a657a4c
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: e6cda9dc2a4664e6e6c0c920932c15ccf214a371
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: eafbe337bea94f32fe6fcef8149ec1c786cb8f01
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: ac0a498abb638300380cc769c527d2a195e13ca0
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: ee6257fa4f51ce23b57273f674b543236b658a42
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 62d0597ace57e8f1e22e83beb125d9bcd540be32
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 849f8df7d83ef23774485068103a6047d97a3635
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 4372bcfd590c9d8e245c35c9cfef8c3be6df073b
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 6054607dc1629cface1b2420fdd69f0fe1e18a50
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: 36a1acb58e5b6328e309617e12948fb7a00b8166
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 78a45df5877e79a8ecc2ce120fa00aae13c243aa
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 8acd8217ebdcdab664e0f4f6b5bd6ee0f62edca4
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 5bef44319e70724fcaf7a1c944c0e95f36e6752d
+      - repo: openstack/openstack-ansible-os_nova
+        hash: f4634205d920899e0bc4d2dfa4c2642044d184a3
+      - repo: openstack/openstack-ansible-os_rally
+        hash: 84c626fc93b34a3a61758be73ae70320cca9aa2d
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: aeb5cdc728eea8f8a63fd29443e0be911ea2e6c1
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 9e91824884fb695c6094baaa2ce22b6a501ef0bd
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: 518982a5340912ebd6e9bc4488ebacb707229efa
+      - repo: openstack/openstack-ansible-plugins
+        hash: f49519df7f07a4b0ab487479598fa150d7ed7e1a
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: 44ddd694e117fbd4fe6d9d1f40f987e82e6c1213
+      - repo: openstack/openstack-ansible-repo_build
+        hash: bc8d059b9f40eca43376a48d92fe3e1d9562e5bc
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 90a77110090ab2c3314a9719daa8c1398ed1ca08
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: 56ca566ef024603b2fbfd3d0b7af6d844e26884a
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: 27e47df8ad22f01d0a8905ec35ff3bfa916dc89b
