--- a/deliverables/pike/python-karborclient.yaml
+++ b/deliverables/pike/python-karborclient.yaml
@@ -17,3 +17,7 @@ releases:
   projects:
   - repo: openstack/python-karborclient
     hash: 4839860b73d220c6639d62d622c95d94e55a3f6a
+- version: 0.6.0
+  projects:
+  - repo: openstack/python-karborclient
+    hash: d5842f61962b72f093b750b864ec2d0b584f671a
