--- a/deliverables/pike/python-cinderclient.yaml
+++ b/deliverables/pike/python-cinderclient.yaml
@@ -31,3 +31,7 @@ releases:
         - Routine dependency updates.
         - Bug fixes and new features, along with some interface changes.
           Read the release notes for details.
+  - version: 3.1.0
+    projects:
+      - repo: openstack/python-cinderclient
+        hash: 99bb6f3ecb1f3c883c50bf715618e64b145257b2
