--- a/deliverables/pike/vitrage.yaml
+++ b/deliverables/pike/vitrage.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/vitrage
         hash: 92ce094eb12a0536dc47e2e9e529afe49e4395f9
+  - version: 1.7.0
+    projects:
+      - repo: openstack/vitrage
+        hash: 4be05a297c56766b41cf93f165715d99d9a48b3f
