--- a/deliverables/pike/python-vitrageclient.yaml
+++ b/deliverables/pike/python-vitrageclient.yaml
@@ -5,8 +5,15 @@ release-model: cycle-with-intermediary
 team: vitrage
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-vitrageclient/unreleased.html
+branches:
+  - name: stable/pike
+    location: 1.3.0
 releases:
   - version: 1.2.0
     projects:
       - repo: openstack/python-vitrageclient
         hash: 52995bbdfe77af42d95b54eb40361ac418c39d64
+  - version: 1.3.0
+    projects:
+      - repo: openstack/python-vitrageclient
+        hash: 8560fc5f5197964e17534d7bd08e9f9503dbb6f9
