--- a/deliverables/pike/vitrage-dashboard.yaml
+++ b/deliverables/pike/vitrage-dashboard.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/vitrage-dashboard
         hash: fa18d223999d9807810b3fc34ec1ec9d21903152
+  - version: 1.3.0
+    projects:
+      - repo: openstack/vitrage-dashboard
+        hash: 4d5727d72e61d6bd9f6ef24bbbf244480b8539f8
