--- a/deliverables/pike/glance.yaml
+++ b/deliverables/pike/glance.yaml
@@ -15,3 +15,7 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 40a9e61f5710d1975c134f220d5f8d5ae4c760fc
+  - version: 15.0.0.0b3
+    projects:
+      - repo: openstack/glance
+        hash: 601ab69336cc85068d11718c424974abdd8beee9
