--- a/deliverables/pike/kolla.yaml
+++ b/deliverables/pike/kolla.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 142c3b839ef9188197b5b5c968266c1ae7dce22d
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/kolla
+        hash: e7a8f3f5bb3e7357e42dfb5cf550fc5f97bbc11b
