--- a/deliverables/pike/kolla-ansible.yaml
+++ b/deliverables/pike/kolla-ansible.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: 9d27e5213712c52cc73a4dbe03f9aa2a9c6850a1
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: e9c4a5877d8cd747864c3fc5d3d3004b009c0940
