Tag Horizon 12.0.0.0b3 (Pike Milestone 3)
Change-Id: I5e8475664d4652ab009fc0038f1c926ca50a8443

--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 945a9a816ff9c474b90d86a1c2b2e97086322d4f
+  - version: 12.0.0.0b3
+    projects:
+      - repo: openstack/horizon
+        hash: 1bf5c9752ce67a216cde73a1796ce9b4e022a465
