--- a/deliverables/pike/searchlight.yaml
+++ b/deliverables/pike/searchlight.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/searchlight
         hash: 9485fa38bb36094d2462310856cc615cac43a050
+  - version: 3.0.0.0b3
+    projects:
+      - repo: openstack/searchlight
+        hash: f949d41106aaa31c7d6c23ff1a31176a195c8ae8
