--- a/deliverables/pike/searchlight-ui.yaml
+++ b/deliverables/pike/searchlight-ui.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/searchlight-ui
         hash: b3a5179896e654468f78757070f474a7ca7f2cf0
+  - version: 3.0.0.0b3
+    projects:
+      - repo: openstack/searchlight-ui
+        hash: 19c2d4d4ef46767ba0c9d84b8bafdde55bbe90ae
