--- a/deliverables/pike/python-zunclient.yaml
+++ b/deliverables/pike/python-zunclient.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: 9b4f4a389cfc429d8a2a23df242ff7b62dd69e8d
+  - version: 0.4.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: d4ea2de956cb95939c5457e647285a3c5c841c21
