--- a/deliverables/pike/cinder.yaml
+++ b/deliverables/pike/cinder.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: ad546570266d04e1435d74d3d0483f962ea7c8cd
+  - version: 11.0.0.0b3
+    projects:
+      - repo: openstack/cinder
+        hash: 8414a58ad47802e3d68aec327c274d7689af9faf
