--- a/deliverables/pike/manila-ui.yaml
+++ b/deliverables/pike/manila-ui.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: eabfe06f116f574a9aa36e9a218d8df3fd322f98
+  - version: 2.10.0
+    projects:
+      - repo: openstack/manila-ui
+        hash: 087948ae1a1e47c97d75437259c8b3577bfdf7ad
