--- a/deliverables/pike/manila.yaml
+++ b/deliverables/pike/manila.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 2ed496dff1ca4a6d88c0fce6610bc912ab1858de
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/manila
+        hash: 2f1536aec4fca04938d2bf5430cb2d1df745f35b
