pike: release nova 16.0.0.0b3
Depends-On: Ifc5cf482209e4f6f4e3e39b24389bd3563d86444

Change-Id: Ic46c1585a9503545273cecf027df6138121205a2

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 5a157a229a546ebc73beca01f5d9ed105c362eaa
+  - version: 16.0.0.0b3
+    projects:
+      - repo: openstack/nova
+        hash: 23c4eb34380bdf3eece11abbe0f6ccb68c060f47
