--- a/deliverables/pike/python-manilaclient.yaml
+++ b/deliverables/pike/python-manilaclient.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/python-manilaclient
         hash: 652d31cb6c5a1f42f0bddb9a5b71597f9ba74354
+  - version: 1.17.0
+    projects:
+      - repo: openstack/python-manilaclient
+        hash: 73c31c667dc4949f6bc4668bbb9105df866762ff
