Pike-3 release of Octavia projects
Change-Id: If6a14ebca946ffe4d77b1843c73d9fc9d73cd435

--- a/deliverables/pike/neutron-lbaas-dashboard.yaml
+++ b/deliverables/pike/neutron-lbaas-dashboard.yaml
@@ -19,3 +19,11 @@ releases:
     highlights: |-
       * Bug fixes
       * Additional translation updates
+  - version: 3.0.0.0b3
+    projects:
+      - repo: openstack/neutron-lbaas-dashboard
+        hash: 3f0b60d5bfa56ef162fbd440d227394846cebd62
+    highlights: |-
+      * Bug fixes
+      * Additional translation updates
+      * Adds member status properties
