--- a/deliverables/pike/neutron-lbaas.yaml
+++ b/deliverables/pike/neutron-lbaas.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas
         hash: 55e6c6f87afca5651fad3906c91b903c6ccdbd46
+  - version: 11.0.0.0b3
+    projects:
+      - repo: openstack/neutron-lbaas
+        hash: a522eeabaf354ff7fb7878c8b5dd12f1d1ace99a
