--- a/deliverables/pike/swift.yaml
+++ b/deliverables/pike/swift.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/swift
         hash: 408500320be39f3ea38ba3255cf1d8ee87ba3ac8
+  - version: 2.15.0
+    projects:
+      - repo: openstack/swift
+        hash: 340014ed224d506be5019fb4097eec9dedf3e5e1
