--- a/deliverables/pike/zaqar.yaml
+++ b/deliverables/pike/zaqar.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: 51299ba1eca22462c5560854f53b668ad7872ac7
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/zaqar
+        hash: 35cee1f52e3760d4265d8a7e9b1fe41620c2603b
