--- a/deliverables/pike/zaqar-ui.yaml
+++ b/deliverables/pike/zaqar-ui.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: 6bcdf8efb1491d9253c679802659c80d3df33151
+  - version: 3.0.0.0b3
+    projects:
+      - repo: openstack/zaqar-ui
+        hash: 3f306b3f4dd2d5a13b42a6cef165278118d4903c
