--- a/deliverables/pike/python-zaqarclient.yaml
+++ b/deliverables/pike/python-zaqarclient.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/python-zaqarclient
         hash: 6f4b6e30ad267ec94575ec5f67b785c603d6ff2b
+  - version: 1.7.0
+    projects:
+      - repo: openstack/python-zaqarclient
+        hash: b6d59fc773d2a89f9673dbc4bf1ffcdbf0a83745
