--- a/deliverables/pike/mistral.yaml
+++ b/deliverables/pike/mistral.yaml
@@ -21,3 +21,11 @@ releases:
         hash: e63dbfc33a44402c71b154c3aa2b50434c05b00e
       - repo: openstack/mistral-extra
         hash: f157dbca85618a8bed3bed6d43b4400fab0a9dd0
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/mistral
+        hash: 60d3abf75ec7a0de95f896fa3562c646f085e47c
+      - repo: openstack/mistral-dashboard
+        hash: 20ab5b624fca9defa221cf5a09c9197fe54afcd8
+      - repo: openstack/mistral-extra
+        hash: b542d7fcd5235edb282c82f894a273ecb827785d
