openstackdocstheme 1.16.1 bug fix
Bug fix release to fix alignment of items in sidebar.

Change-Id: I2f127d842ecf15963bdac4dab68cb54ccedc8a49

--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -141,3 +141,7 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: 979785c760d6d4ffe46fa09037844657a32eb727
+  - version: 1.16.1
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: 3f2de78fa5d9e9bdc0155ee54214f00541a25d62
