--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -83,3 +83,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: 4dbe2ab4357d95f1a648eddb53b7d88bab890b52
+  - version: 0.8.3
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: f1b4a9c8cb0ff8ef9453eb8fd1cb2ee6cb7e3eeb
