--- a/deliverables/ocata/python-monascaclient.yaml
+++ b/deliverables/ocata/python-monascaclient.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/python-monascaclient
         hash: ef358a8847769fc6112dc0b410d16b5bb5172fe3
+  - version: 1.5.1
+    projects:
+      - repo: openstack/python-monascaclient
+        hash: 8face6f1c31e1a8d9272e0f743afb4470fbd4039
