--- a/deliverables/pike/python-troveclient.yaml
+++ b/deliverables/pike/python-troveclient.yaml
@@ -17,3 +17,7 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: 555ba5ed690027088358288c9b0252d5a58bdc0d
+  - version: 2.12.0
+    projects:
+      - repo: openstack/python-troveclient
+        hash: 97dd5908f80ab7bb4b2e36c8bbf0c37739938439
