--- a/deliverables/pike/trove.yaml
+++ b/deliverables/pike/trove.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/trove
         hash: c5d5007d18bd43555804ac91a550d055efcd8ddb
+  - version: 8.0.0.0b3
+    projects:
+      - repo: openstack/trove
+        hash: fa171bd3e92d7d7b9032fc035f554dcb4621ce94
