--- a/deliverables/pike/trove-dashboard.yaml
+++ b/deliverables/pike/trove-dashboard.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/trove-dashboard
         hash: 468b8984d932dd3bd664034d9fa973d2a217f1a5
+  - version: 9.0.0.0b3
+    projects:
+      - repo: openstack/trove-dashboard
+        hash: 1173790b2c45ebf47c435be8b0c2382645434fc8
