--- a/deliverables/pike/keystone.yaml
+++ b/deliverables/pike/keystone.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: c528539879e824b8e6d5654292a85ccbee6dcf89
+  - version: 12.0.0.0b3
+    projects:
+      - repo: openstack/keystone
+        hash: c3b5d2d77b029880521912e43ad963f9b0c5bf99
