--- a/deliverables/pike/python-keystoneclient.yaml
+++ b/deliverables/pike/python-keystoneclient.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/python-keystoneclient
     hash: 937f4d62be338d0208c698ed85d377dc4ce137be
+- version: 3.13.0
+  projects:
+  - repo: openstack/python-keystoneclient
+    hash: a8de72a1a2875e7ccf494b1827747c4bc7008b27
