--- a/deliverables/pike/python-magnumclient.yaml
+++ b/deliverables/pike/python-magnumclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-magnumclient
         hash: 7d5539f28e95bb2264dbc8268614ea348fb293c3
+  - version: 2.7.0
+    projects:
+      - repo: openstack/python-magnumclient
+        hash: f501b618fb344b36d2771ac4921746125e1a0871
