--- a/deliverables/pike/python-heatclient.yaml
+++ b/deliverables/pike/python-heatclient.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 847f9023377b93fc0636309d44ff636fb111d66c
+  - version: 1.11.0
+    projects:
+      - repo: openstack/python-heatclient
+        hash: 804ab3e552771a50bbef3dfacdec0d1fa0573406
