--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 93a446a9650c9e7e35a73353840694ae01e73280
+  - version: 9.0.0.0b3
+    projects:
+      - repo: openstack/heat
+        hash: cc4fdcef058370c3b779f38e8a2f4f0792f5b2de
