--- a/deliverables/ocata/heat.yaml
+++ b/deliverables/ocata/heat.yaml
@@ -41,3 +41,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: b98af9d4646ecae2269ec9459a824d2c733a1e75
+  - version: 8.0.3
+    projects:
+      - repo: openstack/heat
+        hash: a91585396be57b0a9b0a3e4eae1be1ea08588f3f
