--- a/deliverables/newton/heat.yaml
+++ b/deliverables/newton/heat.yaml
@@ -49,3 +49,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 65339f57ca56113b9b17a57119aac1804269333d
+  - version: 7.0.5
+    projects:
+      - repo: openstack/heat
+        hash: c4508361c89d8ebae6ecffa2e0191c5df54d23a8
