--- a/deliverables/pike/python-manilaclient.yaml
+++ b/deliverables/pike/python-manilaclient.yaml
@@ -17,3 +17,7 @@ releases:
     projects:
       - repo: openstack/python-manilaclient
         hash: 73c31c667dc4949f6bc4668bbb9105df866762ff
+  - version: 1.17.1
+    projects:
+      - repo: openstack/python-manilaclient
+        hash: 502eb756cc724442c17e553bc4ee3f6c629ea4d1
